--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,13 @@ section.sec-padding{
      color: #2337B8;
      font-weight: 500;
  }
+ .early-access .early-access-text img{
+     width: 60px;
+ }
+ .early-access .early-access-text:nth-child(2) img,
+ .early-access .early-access-text:nth-child(3) img{
+     width: 50px;
+ }
 
  /* =======================
  Our Portfolio Companies
@@ -329,7 +336,7 @@ footer .footer-link a {
         margin-top: 0px;
     }
     .banner-img{
-        max-width: 500px !important;
+        max-width: 600px !important;
     }
 
     /* section */
@@ -415,8 +422,11 @@ footer .footer-link a {
 
 @media (min-width: 1024px){
     .section .container .section-text {
-        width: 38%;
+        max-width: 400px;
         margin-top: 200px;
+    }
+    .section .container .section-text h2{
+        font-size: 2.6em;
     }
 }
 @media (min-width: 1200px){
@@ -428,8 +438,8 @@ footer .footer-link a {
     .container {
         max-width: 1200px;
     }
-    .section .container .section-text {
+    /* .section .container .section-text {
         width: 38%;
         margin-top: 200px;
-    }
+    } */
 }
