--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,12 @@ section.sec-padding{
     width: 90%;
     margin: 0 auto;
 }
+.vp-100{
+    height: 80vh;
+}
+.vp-100 .container{
+    margin-top: 120px;
+}
 .section-tag-blue,
 .section-tag-red,
 .section-tag-purple{
@@ -103,6 +109,13 @@ section.sec-padding{
     margin-top: 70px;
     width: 100%;
 }
+.section .banner-img .app-icons{
+    margin-top: 0;
+    width: 60%;
+    position: absolute;
+    right: 10px;
+    bottom: 70px;
+}
 
 /* =======================
  Our Philosophy
@@ -128,10 +141,13 @@ section.sec-padding{
 /* =======================
  Early-access
  ========================= */
+ .early-access{
+     background-color: #F8F9FF;
+ }
  .early-access .early-access-text{
      margin-top: 80px;
      padding: 50px 15px;
-     background-color: #F8F9FF;
+     background-color: #FFFFFF;
  }
  /* .early-access .early-access-text img{
      width: 100%;
