--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,26 +180,26 @@ section.sec-padding{
 /* =======================
  Newsletter
  ========================= */
- .form form{
+ .form form div{
      position: relative;
      margin-bottom: 30px;
      display: flex;
      justify-content: space-between;
      max-width: 400px;
  }
- .newsletter .form form{
+ .newsletter .form form div{
      
      margin-left: auto;
      margin-right: auto;
  }
- .form form [type='email']{
+ .form form div [type='email']{
      width: 85%;
      padding: 15px;
      border: 1px solid #2337B8;
      font-size: 16px;
      display: block;
  }
- .form form button{
+ .form form div button{
      padding: 15px;
      width: 13%;
      height: 53px;
@@ -210,6 +210,8 @@ section.sec-padding{
      margin-left: 5px;
      border-radius: 5px;
      display: block;
+     position: relative;
+     top: 1.5px;
  }
 .newsletter h2,
 .newsletter p{
