--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    font-family: freight-sans-pro, sans-serif;
+    font-family: "freight-sans-pro",sans-serif;
     color: #121212;
 }
 
@@ -8,12 +8,12 @@ body{
     margin: 0;
 }
 h1{
-    font-weight:500;
+    font-weight:600;
 }
 h2,
 h3,
 h4{
-    font-weight: 400;
+    font-weight: 600;
 }
 h2{
     font-size: 2em;
@@ -353,6 +353,8 @@ footer .footer-link a {
     } */
     .banner .container .banner-img svg{
         margin-top: 0px;
+        position: relative;
+        top: -70px;
     }
     .banner-img{
         max-width: 600px !important;
