--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,25 @@ footer .footer-link a {
 
 
 
+@media (max-width: 500px){
+    .banner .banner-img svg{
+        height: 400px;
+        margin-bottom: 100px;
+        display: block;
+    }
+    .banner .banner-img{
+        margin-bottom: 100px;
+        margin-top: 50px;
+    }
+    .vp-100{
+        height: 100vh;
+    }
+}
+@media (max-width: 375px){
+    .section{
+        margin-bottom: 100px;
+    }
+}
 @media (min-width: 768px){
     .container {
         max-width: 720px;
